--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,11 @@
 /* ----------------- Special ----------------- */
 
+/**************************************
+* Archivo de estilos del aplicativo   *
+* @ Juan Rubiano                      *
+* @ version 1.2.2                     *
+**************************************/
+
 html, body{
   font-family: 'Roboto', sans-serif;
 }
